--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
 
   </main>
 
-  <script type="module" src="./js/main.js"></script>
+  <script type="module" src="./JS/class.js"></script>
+
+  <script type="module" src="./JS/data.js"></script>
+
+  <script type="module" src="./JS/main.js"></script>
+
+  <script type="module" src="./JS/methods.js"></script>
 </body>
 </html>
